fixed: header overflowing when browser window is very short

--- a/viewport-header-transparent-content-bs.scss
+++ b/viewport-header-transparent-content-bs.scss
@@ -19,7 +19,6 @@
 
 html {
 	
-	-webkit-transform: translate(0,0,0); /* saves 50ms on Chrome */
 	position: relative;
 	box-sizing: border-box;
 	overflow-x: hidden;
@@ -97,8 +96,8 @@ h1, h2, h3, h4, h5, h6 {
 header {
 	
 	overflow: hidden;
-	-webkit-transform: translate(0,0,0); /* saves 50ms on Chrome */
 	height: 100vh;
+	position: relative;
 
 }
 
@@ -158,7 +157,6 @@ header a.logo img {
 	background: rgba(0,0,0,.5);
 	font-size: 0;
 	z-index: 1;
-	-webkit-transform: translate(0,0,0); /* saves 50ms on Chrome */
 	color: #fff;
 	
 }
@@ -328,7 +326,7 @@ main .row.transparent > * > * {
 
 	font-size: 1rem;
 	background: #fff;
-		border: 1rem solid #fff; /* Spacing between circles */
+	border: 1rem solid #fff; /* Spacing between circles */
 
 
 }
@@ -578,3 +576,9 @@ main .row.transparent > * > .circle {
 	
 }
 */
+
+.section {
+	
+	background: #fff;
+	
+}
